--- a/src/styles.css
+++ b/src/styles.css
@@ -64,13 +64,15 @@ canvas {
 .info-bottom-left{
   position: absolute;
   margin: 0;
-  padding: 15px;
+  padding-left: 25px;
+  padding-bottom: 20px;
   text-align: left;
 }
 .info-bottom-right {
   position: absolute;
   margin: 0;
-  padding: 15px;
+  padding-right: 25px;
+  padding-bottom: 20px;
   text-align: right;
 }
 
@@ -94,6 +96,10 @@ canvas {
   right: 0;
 }
 
+.label{
+  font-weight: 500;
+}
+
 
 #black-fade {
   position: fixed;
@@ -107,3 +113,16 @@ canvas {
   transition: opacity 1s ease;
   z-index: 9999;
 }
+
+#loading-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0);
+    opacity: 1;
+    transition: opacity 1s ease;
+    z-index: 100;
+    pointer-events: all;
+  }
