--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,22 @@ body {
   padding: 0px;
   height: 100vh;
   width: 100vw;
+  cursor: none; /* Hide the cursor per poi far vedere solo il pallino*/
+}
+
+#customCursor {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: white;
+  mix-blend-mode: difference;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+  transition: width 0.2s ease, height 0.2s ease;
 }
 
 canvas {
